--- a/templates/base.html
+++ b/templates/base.html
@@ -20,30 +20,30 @@
 		<span class="icon-bar"></span>
 		<span class="icon-bar"></span>
 	    </button>
-		<a class="brand" href="#">Notebook</a>
+		<a class="brand" href="/">Notebook</a>
 		<span class="user_creds"><?=$_SESSION["logged"]?>
 		<div class="nav-collapse collapse">
 		    <ul class="nav">
 			<li class="active">
-			    <a href="#">Home</a>
+			    <a href="/">Home</a>
 			</li>
 			<li>
-			    <a href="#">About</a>
+			    <a href="/about">About</a>
 			</li>
 			<li>
-			    <a href="#">Contact</a>
+			    <a href="/contact">Contact</a>
 			</li>
 			<li>
-			    <a href="signup.php">Sign Up</a>
+			    <a href="/signup">Sign Up</a>
 			</li>
 			<li>
-			    <a href="login.php">Sign In</a>
+			    <a href="/signin">Sign In</a>
 			</li>
 			<li>
-			    <a href="viewBooks.php">View books</a>
+			    <a href="/view">View books</a>
 			</li>
 			<li>
-			    <a href="createBook.php">Create a book</a>
+			    <a href="/create">Create a book</a>
 			</li>
 		    </ul>
 		</div>
