Attempt to get postgresql working

--- a/templates/about.html
+++ b/templates/about.html
@@ -1,5 +1,6 @@
 {% extends 'base.html' %}
 {% block title %} About Notebook{% endblock %}
+{% block aboutTabDescriptor %} class = 'active' {% endblock %}
 {% block content %}
 This is a new way of taking notes
 {% endblock %}
