--- a/templates/view.html
+++ b/templates/view.html
@@ -1,5 +1,6 @@
 {% extends 'base.html' %}
 {% block title %} View Books {% endblock %}
+{% block viewTabDescriptor %} class = 'active'{%endblock%}
 {% block content %}
     Here are some books
 {% endblock %}
