--- a/templates/contact.html
+++ b/templates/contact.html
@@ -1,5 +1,6 @@
 {% extends 'base.html' %}
 {% block title %} Contact Information {% endblock %}
+{% block contactTabDescriptor %} class = 'active' {% endblock %}
 {% block content %}
     My name is Michael
 {% endblock %}
