--- a/templates/create.html
+++ b/templates/create.html
@@ -1,5 +1,6 @@
 {% extends 'base.html' %}
 {% block title %} Create a New Book {% endblock %}
+{% block createTabDescriptor %} class = 'active' {% endblock %}
 {% block content %}
     Please Create a book
 {% endblock %}
