--- a/templates/notes/auth.html
+++ b/templates/notes/auth.html
@@ -1,8 +1,12 @@
 {% extends 'base.html' %}
 {% block title %} Sign In {% endblock %}
-{% block authenticateTabDescriptor %} class = 'active'{%endblock%}
 {% block content %}
-<form method='post'>
+{% if form.errors %}
+<p> Your username and password didn't match. Please try again.</p>
+{% endif %}
+
+<form method='post' action="{% url 'django.contrib.auth.views.login' %}">
+{% csrf_token %}
    <input type='text' name='username' placeholder='username'>
    <input type='password' name='password' placeholder='password'>
    <input type='submit' value='Sign in'>
