--- a/notes/templates/notes/about.html
+++ b/notes/templates/notes/about.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'notes/base.html' %}
 {% block title %} About Notebook{% endblock %}
 {% block aboutTabDescriptor %} class = 'active' {% endblock %}
 {% block content %}
