--- a/notes/templates/notes/auth.html
+++ b/notes/templates/notes/auth.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'notes/base.html' %}
 {% block title %} Sign In {% endblock %}
 {% block content %}
 {% if form.errors %}
