--- a/notes/templates/notes/contact.html
+++ b/notes/templates/notes/contact.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'notes/base.html' %}
 {% block title %} Contact Information {% endblock %}
 {% block contactTabDescriptor %} class = 'active' {% endblock %}
 {% block content %}
