--- a/notes/templates/notes/create.html
+++ b/notes/templates/notes/create.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'notes/base.html' %}
 {% block title %} Create a New Book {% endblock %}
 {% block createTabDescriptor %} class = 'active' {% endblock %}
 {% block content %}
