--- a/notes/templates/notes/view.html
+++ b/notes/templates/notes/view.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'notes/base.html' %}
 {% block title %} View Books {% endblock %}
 {% block viewTabDescriptor %} class = 'active'{%endblock%}
 {% block content %}
