--- a/notes/templates/notes/signin.html
+++ b/notes/templates/notes/signin.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'notes/base.html' %}
 {% block title %} Sign In {% endblock %}
 {% block authenticateTabDescriptor %} class = 'active'{%endblock%}
 {% block content %}
