--- a/notes/templates/notes/base.html
+++ b/notes/templates/notes/base.html
@@ -20,7 +20,7 @@
 		<span class="icon-bar"></span>
 		<span class="icon-bar"></span>
 	    </button>
-		<a class="brand" href="/">Notebook</a>
+		<a class="brand" href="/">Dontyounote beta</a>
 		<span class="user_creds"><?=$_SESSION["logged"]?>
 		<div class="nav-collapse collapse">
 		    <ul class="nav">
