--- a/notes/templates/notes/auth.html
+++ b/notes/templates/notes/auth.html
@@ -5,10 +5,46 @@
 <p> Your username and password didn't match. Please try again.</p>
 {% endif %}
 
-<form method='post' action="{% url 'django.contrib.auth.views.login' %}">
-{% csrf_token %}
-   <input type='text' name='username' placeholder='username'>
-   <input type='password' name='password' placeholder='password'>
-   <input type='submit' value='Sign in'>
+<div class='container'>
+<form class='form-signup span4' method='post'>
+	{% csrf_token %}
+	<h2 class='form-signup-heading'>Create an Account</h2>
+	<div class='row-fluid'>
+		<label class='span6'>Email*</label>
+		<label class='span6'>First Name</label>
+	</div>
+	<div class='row-fluid'>
+		<input type='text' class='input-block-level span6' name='email' placeholder='email'>
+		<input type='text' class='input-block-level span6' name='firstName' placeholder='First Name'>
+	</div>
+	<div class='row-fluid'>
+		<label class='span6'>Password*</label>
+		<label class='span6'>Last Name</label>
+	</div>
+	<div class='row-fluid'>
+		<input type='password' class='input-block-level span6' name='password' placeholder='password'>
+		<input type='text' class='input-block-level span6' name='lastName' placeholder='Last Name'>
+	</div>
+	<div class='row-fluid'>
+		<label class='span6'>Confirm Password*</label>
+	</div>
+	<div class='row-fluid'>
+	<input type='password' class='input-block-level span6' name='confirmPassword' placeholder='Enter password again'>
+	</div>
+	<div class='row-fluid'>
+	<button class='btn btn-large btn-primary span8 offset2' type='submit' value='signUp'>Create Account</button>
+	</div>
 </form>
+
+<form class='form-signin span2 offset2' method='post' action="{% url 'django.contrib.auth.views.login' %}">
+{% csrf_token %}
+   <h2 class='form-signin-heading'>Sign In</h2>
+   <input type='text' class='input-block-level' name='username' placeholder='username'>
+   <input type='password' class='input-block-level' name='password' placeholder='password'>
+   <label class='checkbox'>
+      <input type='checkbox' value='remember_me'>Remember Me</input>
+   </label>
+   <button class='btn btn-large btn-primary' type='submit' value='signIn'>Sign In</button>
+</form>
+</div>
 {% endblock %}
