--- a/notes/templates/notes/user.html
+++ b/notes/templates/notes/user.html
@@ -1,5 +1,6 @@
 {% extends 'notes/base.html' %}
 {% block title %} User Info {% endblock %}
+{% block profileTabDescriptor %} class = 'active' {% endblock %}
 {% block content %}
 Welcome to Dontyounote {{user}}!
 Your user id is {{user.id}}.
