--- a/notes/templates/notes/auth.html
+++ b/notes/templates/notes/auth.html
@@ -1,5 +1,6 @@
 {% extends 'notes/base.html' %}
 {% block title %} Sign In {% endblock %}
+{% block authenticateTabDescriptor %} class = 'active' {% endblock %}
 {% block content %}
 {% if form.errors %}
 <p> Your username and password didn't match. Please try again.</p>
@@ -11,25 +12,27 @@
 	<h2 class='form-signup-heading'>Create an Account</h2>
 	<div class='row-fluid'>
 		<label class='span6'>Email*</label>
-		<label class='span6'>First Name</label>
+		<label class='span6'>Username*</label>
 	</div>
 	<div class='row-fluid'>
 		<input type='text' class='input-block-level span6' name='email' placeholder='email'>
-		<input type='text' class='input-block-level span6' name='firstName' placeholder='First Name'>
+		<input type='text' class='input-block-level span6' name='username' placeholder='username'>
 	</div>
 	<div class='row-fluid'>
 		<label class='span6'>Password*</label>
-		<label class='span6'>Last Name</label>
+		<label class='span6'>First Name</label>
 	</div>
 	<div class='row-fluid'>
 		<input type='password' class='input-block-level span6' name='password' placeholder='password'>
-		<input type='text' class='input-block-level span6' name='lastName' placeholder='Last Name'>
+		<input type='text' class='input-block-level span6' name='firstName' placeholder='First Name'>
 	</div>
 	<div class='row-fluid'>
 		<label class='span6'>Confirm Password*</label>
+		<label class='span6'>Last Name</label>
 	</div>
 	<div class='row-fluid'>
 	<input type='password' class='input-block-level span6' name='confirmPassword' placeholder='Enter password again'>
+	<input type='text' class='input-block-level span6' name='lastName' placeholder='Last Name'>
 	</div>
 	<div class='row-fluid'>
 	<button class='btn btn-large btn-primary span8 offset2' type='submit' value='signUp'>Create Account</button>
