--- a/notes/templates/notes/auth.html
+++ b/notes/templates/notes/auth.html
@@ -7,6 +7,11 @@
 {% endif %}
 
 <div class='container'>
+{%if registerForm.errors %}
+	<p>
+		Please Correct the error {{ registerForm.erros|pluralize}} below.
+	</p>
+{% endif %}
 <form class='form-signup span4 hero-unit' method='post' action=''>
 	{% csrf_token %}
 	<h2 class='form-signup-heading'>Create an Account</h2>
@@ -15,40 +20,33 @@
 		<label class='span6'>Username*</label>
 	</div>
 	<div class='row-fluid'>
-		{{registerForm.email}}
-		{{registerForm.username}}
-		<!--
-		<input type='text' class='input-block-level span6' name='email' placeholder='email'>
-		<input type='text' class='input-block-level span6' name='username' placeholder='username'>
-	-->
+		<input id='up_email' type='text' class='input-block-level span6' name='email' placeholder='email'>
+		<input id='up_usernam' type='text' class='input-block-level span6' name='username' placeholder='username'>
 	</div>
 	<div class='row-fluid'>
 		<label class='span6'>Password*</label>
-		<label class='span6'>First Name</label>
-	</div>
-	<div class='row-fluid'>
-		{{registerForm.password}}
-		{{registerForm.firstName}}
-		<!--
-		<input type='password' class='input-block-level span6' name='password' placeholder='password'>
-		<input type='text' class='input-block-level span6' name='firstName' placeholder='First Name'>
-	-->
-	</div>
-	<div class='row-fluid'>
 		<label class='span6'>Confirm Password*</label>
+	</div>
+	<div class='row-fluid'>
+		<input id='up_password' type='password' class='input-block-level span6' name='password' placeholder='password'>
+		<input id='up_cPass' type='password' class='input-block-level span6' name='confirmedPassword' placeholder='Enter password again'>
+	</div>
+	<div class='row-fluid'>
+		<label class='span6'>First Name</label>
 		<label class='span6'>Last Name</label>
 	</div>
 	<div class='row-fluid'>
-		{{registerForm.confirmedPassword}}
-		{{registerForm.lastName}}
-		<!--
-	<input type='password' class='input-block-level span6' name='confirmPassword' placeholder='Enter password again'>
-	<input type='text' class='input-block-level span6' name='lastName' placeholder='Last Name'>
--->
+		<input id='up_first' type='text' class='input-block-level span6' name='firstName' placeholder='First Name'>
+		<input id='up_last' type='text' class='input-block-level span6' name='lastName' placeholder='Last Name'>
 	</div>
 	<div class='row-fluid'>
 	<button class='btn btn-large btn-primary span8 offset2' type='submit' name='signUp' value='signUp'>Create Account</button>
 	</div>
+    {% for field, errors in registerForm.errors.items %}
+    	{% for error in errors %}
+        <div class='alert alert-error'>{{ error }}</div>
+        {% endfor %}
+    {% endfor %}
 </form>
 
 {%if signinForm.errors %}
@@ -59,8 +57,8 @@
 <form class='form-signin span2 offset2 hero-unit' method='post' action=''>
 {% csrf_token %}
    <h2 class='form-signin-heading'>Sign In</h2>
-   {{ signinForm.username }}
-   {{ signinForm.password }}
+   <input type='text' name='username' id='in_username' placeholder='Username' class='input-block-level'>
+   <input type='password' name='password' id='in_password' placeholder='Password' class='input-block-level'>
 <!--   
    <label class='checkbox'>
       <input type='checkbox' value='remember_me'>Remember Me</input>
