--- a/notes/templates/notes/auth.html
+++ b/notes/templates/notes/auth.html
@@ -6,10 +6,12 @@
 <p> Your username and password didn't match. Please try again.</p>
 {% endif %}
 
+<p> </p>
+
 <div class='container'>
 {%if registerForm.errors %}
 	<p>
-		Please Correct the error {{ registerForm.erros|pluralize}} below.
+		Please Correct the error {{ registerForm.errors|pluralize}} below.
 	</p>
 {% endif %}
 <form class='form-signup span4 hero-unit' method='post' action=''>
@@ -20,9 +22,21 @@
 		<label class='span6'>Username*</label>
 	</div>
 	<div class='row-fluid'>
-		<input id='up_email' type='text' class='input-block-level span6' name='email' placeholder='email'>
-		<input id='up_usernam' type='text' class='input-block-level span6' name='username' placeholder='username'>
+		<input id='up_email' type='text' class='input-block-level span6 {%if registerForm.email.errors %} error {% endif %}' name='email' placeholder='email'> <input id='up_usernam' type='text' class='input-block-level span6' name='username' placeholder='username'>
 	</div>
+
+	{% for error in registerForm.email.errors %}
+	<div class = 'row-fluid'>
+        <div class='alert alert-error span6'>{{ error }}</div>
+	</div>
+	{% endfor %}
+
+	{% for error in registerForm.username.errors %}
+	<div class = 'row-fluid'>
+        <div class='alert alert-error span6 offset6'>{{ error }}</div>
+	</div>
+	{% endfor %}
+	
 	<div class='row-fluid'>
 		<label class='span6'>Password*</label>
 		<label class='span6'>Confirm Password*</label>
@@ -31,6 +45,11 @@
 		<input id='up_password' type='password' class='input-block-level span6' name='password' placeholder='password'>
 		<input id='up_cPass' type='password' class='input-block-level span6' name='confirmedPassword' placeholder='Enter password again'>
 	</div>
+	{% for error in registerForm.confirmedPassword.errors %}
+	<div class = 'row-fluid'>
+        <div class='alert alert-error span6 offset6'>{{ error }}</div>
+	</div>
+	{% endfor %}
 	<div class='row-fluid'>
 		<label class='span6'>First Name</label>
 		<label class='span6'>Last Name</label>
@@ -42,18 +61,11 @@
 	<div class='row-fluid'>
 	<button class='btn btn-large btn-primary span8 offset2' type='submit' name='signUp' value='signUp'>Create Account</button>
 	</div>
-    {% for field, errors in registerForm.errors.items %}
-    	{% for error in errors %}
-        <div class='alert alert-error'>{{ error }}</div>
-        {% endfor %}
-    {% endfor %}
+	{% if next %}
+	<input type='hidden' name='next' value={{next}}></input> 
+	{%endif%}
 </form>
 
-{%if signinForm.errors %}
-	<p>
-		Please Correct the error {{ signinForm.erros|pluralize}} below.
-	</p>
-{% endif %}
 <form class='form-signin span2 offset2 hero-unit' method='post' action=''>
 {% csrf_token %}
    <h2 class='form-signin-heading'>Sign In</h2>
@@ -64,7 +76,15 @@
       <input type='checkbox' value='remember_me'>Remember Me</input>
    </label>
 -->
+    {% for field, errors in signinForm.errors.items %}
+    	{% for error in errors %}
+        <div class='alert alert-error'>{{ error }}</div>
+        {% endfor %}
+    {% endfor %}
    <button class='btn btn-large btn-primary' type='submit' name='signIn' value='signIn'>Sign In</button>
+	{% if next %}
+	<input type='hidden' name='next' value={{next}}></input> 
+	{%endif%}
 </form>
 </div>
 
