--- a/notes/templates/notes/base.html
+++ b/notes/templates/notes/base.html
@@ -7,56 +7,68 @@
 <script src="{% static "jQuery/jquery-1.10.1.min.js" %}"></script>
 <link href="{% static "bootstrap/css/bootstrap.min.css" %}" rel="stylesheet" media="screen">
 <link href="{% static "bootstrap/css/bootstrap-responsive.min.css" %}" rel="stylesheet" media="screen">
+<link rel='shortcut icon' href='{% static "favicon.ico" %}' type='image/x-icon' />
 </head>
 <body>
     {% block header %} 
-    <div class="navbar navbar-inverse"
-    style="clear:both;">
-	<div class="navbar-inner">
-	    <div class="container">
-	    <button type="button" class="btn btn-navbar" 
-		data-toggle="collapse" data-target=".nav-collapse">
-		<span class="icon-bar"></span>
-		<span class="icon-bar"></span>
-		<span class="icon-bar"></span>
-	    </button>
-		<a class="brand" href="/">Dontyounote <small>beta</small></a>
-		<span class="user_creds"><?=$_SESSION["logged"]?>
-		<div class="nav-collapse collapse">
-		    <ul class="nav">
-			<li {% block viewTabDescriptor %} {%endblock%}>
-			    <a href="/view">View books</a>
-			</li>
-			<li {% block createTabDescriptor %} {%endblock%}>
-			    <a href="/create">Create a book</a>
-			</li>
-			<li {% block aboutTabDescriptor %} {%endblock%}>
-			    <a href="/about">About</a>
-			</li>
-			<li {% block contactTabDescriptor %} {%endblock%}>
-			    <a href="/contact">Contact</a>
-			</li>
-			{% if user.is_authenticated %}
-			<li {% block profileTabDescriptor %} {%endblock %}> 
-				<a href='/accounts/profile'>Logged in as {{ user.username }} </a>
-			</li>
-			<li>
-			    <a href="/logout">Logout</a>
-			</li>
-			{% else %}
-			<li {% block authenticateTabDescriptor %} {%endblock%}>
-			    <a href="/authenticate">Sign Up / Sign In</a>
-			</li>
-			{% endif %}
-		    </ul>
+    <div id='wrap'>
+	    <div class='container'>
+		    <div class="navbar navbar-inverse"
+		    style="clear:both;">
+				<div class="navbar-inner">
+				    <div class="container">
+					    <button type="button" class="btn btn-navbar" 
+						data-toggle="collapse" data-target=".nav-collapse">
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+						</button>
+						<a class="brand" href="/">Dontyounote <small>beta</small></a>
+						<div class="nav-collapse collapse">
+							<ul class="nav">
+								<li {% block viewTabDescriptor %} {%endblock%}>
+									<a href="/view">View books</a>
+								</li>
+								<li {% block createTabDescriptor %} {%endblock%}>
+									<a href="/create">Create a book</a>
+								</li>
+								<li {% block aboutTabDescriptor %} {%endblock%}>
+									<a href="/about">About</a>
+								</li>
+								<li {% block contactTabDescriptor %} {%endblock%}>
+									<a href="/contact">Contact</a>
+								</li>
+								{% if user.is_authenticated %}
+								<li {% block profileTabDescriptor %} {%endblock %}> 
+									<a href='/accounts/profile'>Logged in as {{ user.username }} </a>
+								</li>
+								<li>
+									<a href="/logout">Logout</a>
+								</li>
+								{% else %}
+								<li {% block authenticateTabDescriptor %} {%endblock%}>
+									<a href="/authenticate">Sign Up / Sign In</a>
+								</li>
+								{% endif %}
+							</ul>
+						</div>
+					</div>
+				</div>
+			</div>
+		    {% block content %} 
+		    <p>Current Time: {{current_date}} </p>
+		    {% endblock %}
 		</div>
-	    </div>
+		<div id='push'></div>
 	</div>
-    </div>
-    {% endblock %}
-    {% block content %} 
-    <p>Current Time: {{current_date}} </p>
-    {% endblock %}
+	<!--
+	<div id='footer'>
+		<div class='container'>
+			<p class='muted'>Developer Michael Christen, 2013</p>
+		</div>
+	</div>
+	-->
+	{% endblock %}
 {% block footer %}
 <script src= "{% static "bootstrap/js/bootstrap.min.js" %}" ></script>
 <script src= "{% static "bootstrap/js/bootstrap-dropdown.js" %}"></script>
